<resources>
    <string name="app_name">芒果派</string>

    <string name="login_mango">登录芒果派</string>
    <string name="login_with_wx">使用微信登陆</string>
    <string name="common_back">返回</string>
    <string name="cancel">取消</string>
    <string name="refresh">刷新</string>
    <string name="sure_submit">确定</string>
    <string name="rmb">&#165;</string>
    <string name="please_wait">请稍候...</string>
    <string name="uninstalled_wx">您还未安装微信</string>

    <string name="page_no_message">暂无消息</string>
    <string name="page_no_trend">暂无动态</string>
    <string name="page_no_collection">暂无收藏</string>
    <string name="page_no_search">搜索无结果</string>
    <string name="page_no_data">暂无数据</string>
    <string name="page_no_works_project">暂无工作包</string>
    <string name="page_no_course">暂无授课</string>

    <string name="please_input_phone">请输入11位手机号码</string>
    <string name="please_input_smscode">请输入验证码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_protocal_tip">点击登录即表示已经阅读并接收</string>
    <string name="user_protocal">《用户协议》</string>
    <string name="please_regist">还没账号？快了注册吧>></string>
    <string name="login_failure">登录失败，请稍候重试</string>
    <string name="get_verify_code_failure">获取验证码失败，请稍候重试</string>

    <string name="get_verify_code">获取验证码</string>
    <string name="regist">注册</string>
    <string name="regist_protocal_tip">点击注册即表示已经阅读并接收</string>
    <string name="please_input_right_phone">请输入正确的手机号</string>

    <string name="nickname">昵称：</string>
    <string name="please_input_nickname">昵称不超过20个字符或10个中文</string>
    <string name="set_nickname_title">你离芒果派只差一步</string>
    <string name="finish">完成</string>

    <string name="update_profile_info">修改个人信息</string>

    <string name="my_role">身份：%s</string>
    <string name="my_order_list">我的订单</string>
    <string name="my_works">我的工作包</string>
    <string name="my_classes">我的授课</string>
    <string name="my_class_schedule">我的授课安排</string>
    <string name="my_account">我的账户</string>
    <string name="setting">设置</string>

    <string name="update_my_role">身份升级</string>
    <string name="usable_limit">可用资金（元）</string>
    <string name="blocked_limit">锁定资金（元）</string>

    <string name="profile_info">个人资料</string>
    <string name="phone_num">手机号</string>
    <string name="trans_pwd">交易密码</string>
    <string name="about_us">关于我们</string>
    <string name="about_detail">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;芒果派是广州互原电子商务公司旗下百分百控股项目。作为一个新型大学生服务平台，芒果派结合助力企业，发起多类传统行业与互联网相结合的专案项目。\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;大学生自发组队，可同时通过芒果派平台上职场实操导师团的技能及经验指导，按企业运营标准来开展项目，完成项目工作包。\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;在电商平台建设运营、人力资源及市场推广方面，团队骨干成员均具有10年以上工作经验。在创新项目包模式运营实操方面，团队亦屡创佳绩！项目投资诸如广交会电商大学生实践项目，卡奔跨境购物平台微店长项目等，均由芒果团队与行业大咖联合出品。\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;而在校企合作方面，芒果派团队亦是行业翘楚。坐拥广东、湖南、江苏、青岛、广西五省的百所高校资源并动态更新，依仗昔日校企合作丰富的项目案例和实践阅历，团队带着芒果派在放飞自我的路上越走越远~ </string>
    <string name="about_company_year">Copyright © 2017 - 2018</string>
    <string name="about_company">广州市互原电子商务有限公司</string>
    <string name="share_to_friend">分享给好友</string>
    <string name="clear_cache">清除缓存</string>

    <string name="click_to_edit">点击编辑</string>
    <string name="click_to_eye">点击查看</string>
    <string name="click_to_update">点击升级</string>
    <string name="un_setting">未设置</string>

    <string name="society_info">社交信息</string>
    <string name="basic_info">基本信息</string>
    <string name="school_info">学校信息</string>
    <string name="about_CV">简历相关</string>
    <string name="cantact_way">联系方式</string>

    <string name="found">发现</string>
    <string name="publish">发布</string>
    <string name="please_input_content">请输入内容</string>
    <string name="please_input_something">写点什么吧...</string>
    <string name="input_num">您还可以写%s字</string>

    <string name="interact_area">互动区</string>

    <string name="teacher">导师</string>

    <string name="noconnectionremind">无网络连接</string>
    <string name="wrongconnectionremind">网络出了点小问题</string>
    <string name="noconnection">无网络连接</string>
    <string name="live_network_error">您的网络有问题，请检查重试</string>
    <string name="noconnectionremind_for_draft">没有网络连接，请检查网络设置</string>

    <string name="please_select_gender">请选择性别</string>
    <string name="please_input_nick_name">请输入昵称</string>
    <string name="update_member_failure">设置用户信息失败，请稍后重试</string>

    <string name="add_trend_failure">发布动态失败，请稍后重试</string>
    <string name="my_current_role">当前我的身份：%s</string>

    <string name="get_member_wallet_failure">加载钱包信息失败，请稍后重试</string>
    <string name="unbind_card">未绑卡</string>
    <string name="add_sure">确认添加</string>
    <string name="add_blank_card">添加银行卡</string>

    <string name="teacher_detail">导师详情</string>

    <string name="check_student_role">验证学生身份</string>
    <string name="my_student_role">我的学生身份</string>
    <string name="check_totur_role">升级为导师</string>
    <string name="my_totur_role">我的导师身份</string>
    <string name="check_company_role">注册为企业</string>
    <string name="my_company_role">我的企业身份</string>
    <string name="check_community_role">注册为社团</string>
    <string name="my_community_role">我的社团身份</string>

    <string name="my_blank_card">我的银行卡</string>
    <string name="get_cash">提现</string>
    <string name="trasn_detail">交易明细</string>

    <string name="place_order">下单</string>
    <string name="place_order_to_pay">下单支付</string>
    <string name="use">使用</string>
    <string name="valid_promotion_code">派号：%s，享受8折优惠</string>
    <string name="not_valid_promotion_code">这是一个无效的派号：%s</string>
    <string name="pay_for_order">支付订单</string>
    <string name="pay_of_now">立即支付</string>
    <string name="pay_with_card">银行卡支付</string>
    <string name="pay_with_alipay">支付宝支付</string>
    <string name="pay_with_wx">微信支付</string>

    <string name="submit_verify">提交认证</string>
    <string name="check_your_student_role">验证您的学生身份</string>
    <string name="save_role_tip">所有信息将受平台加密保存，严密监管</string>

    <string name="want_count">%d想听</string>
    <string name="wanted_count">%d听过</string>

    <string name="course_detail">课程详情</string>

    <string name="order_detail">订单详情</string>
    <string name="pay_detail">支付详情</string>

    <string name="message">消息</string>
    <string name="fav">收藏</string>

    <string name="add_course">新建课程</string>

    <string name="can_get_cash_amount">可提取金额：%s</string>

    <string name="picture_uploading">图片正在上传，请稍候</string>
    <string name="picture_upload_success">图片上传成功</string>
    <string name="picture_upload_failure">图片上传失败</string>
    <string name="star_code">&#10033;</string>

    <string name="my_join_works">我参与的工作包</string>
    <string name="my_company_works">我的企业工作包</string>

    <string name="works_project_detail">工作包详情</string>
    <string name="works_project_location">活动地点：%s</string>
    <string name="works_project_join_want">%1$d人想去&#160;&#160;&#160;&#160;%2$d人已报名</string>

    <string name="member_trans_list">交易明细</string>
    <string name="member_trans_detail">交易详情</string>

    <string name="works_collection">作品</string>
    <string name="works_collection_photos">作品照片</string>
    <string name="documen_plan">文档方案</string>
    <string name="group_photos">团队照片</string>
    <string name="works_collection_bottom_tip">您可以在PC端登录www.enjoymangopa.com，使用电脑上传Word、PDF、PPT等文件。</string>

    <string name="works_team">团队</string>
    <string name="have_member_count">已有%d人</string>
    <string name="actor_info">发起人：%1$s（%2$s）</string>
    <string name="save">保存</string>
    <string name="works">作品</string>
    <string name="member_name_role">%1$s（%2$s）</string>
    <string name="member_count">%d人</string>

    <string name="forward">转发</string>
    <string name="tutor_reply">导师回复：%s</string>

    <string name="my_coupon">我的优惠券</string>

    <string name="work_project_comment">点评</string>
    <string name="write_comment">写评价</string>
    <string name="has_write_comment">已评</string>
    <string name="vote_count">%d票</string>

    <string name="tutor_reply_comment">导师回复：%s</string>
    <string name="progress">%1$d%%</string>
    <string name="people_count">%d人</string>
    <string name="schedule_time">%d点</string>

    <string name="coupon_use_time">%1$s—%2$s使用</string>
    <string name="discount_price">&#165;%s</string>

    <string name="please_input_search_content">请输入搜索内容</string>

    <string name="permission_camera">请在 设置-应用管理 中开启此应用的相机授权。</string>
    <string name="permission_storage">请在 设置-应用管理 中开启此应用的储存授权。</string>
    <string name="permission_call_phone">请在 设置-应用管理 中开启此应用的拨号授权。</string>

    <string name="exit_message">再按一次退出芒果派</string>

    <string name="join_exit_team">加入已有的团队</string>
    <string name="self_intro">自我介绍</string>

    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="think_about">等一下再决定</string>
    <string name="has_reply_for_ok">已回复，我知道了</string>
</resources>
