<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_project_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_15"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_16"/>

        <View
            style="@style/margin_horizontal_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_15"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_16"
            android:text="@string/works_collection_photos"/>

        <cn.com.mangopi.android.ui.widget.GridView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15" />

        <View
            style="@style/margin_horizontal_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_15"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_16"
            android:text="@string/documen_plan"/>

        <cn.com.mangopi.android.ui.widget.GridView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15" />

        <View
            style="@style/margin_horizontal_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_15"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_16"
            android:text="@string/group_photos"/>

        <cn.com.mangopi.android.ui.widget.GridView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15" />

        <View
            style="@style/margin_horizontal_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_15"
            android:gravity="center"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_14"
            android:text="@string/works_collection_bottom_tip"/>
    </LinearLayout>

</ScrollView>
