<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_cccccc"
            android:text="@string/about_company_year"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/sp_14"
            android:layout_marginTop="@dimen/dp_7"
            android:textColor="@color/color_cccccc"
            android:text="@string/about_company"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_bottom"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_180"
                android:layout_height="@dimen/dp_60"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_25"
                android:adjustViewBounds="true"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/dp_2"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_25"
                android:text="@string/about_detail"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/sp_15" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>