<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bg_dialog">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_31"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_31"
        android:gravity="center"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:gravity="center"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_31">
        <cn.com.mangopi.android.ui.widget.RoundImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:src="@mipmap/logo" />
        <TextView
            android:id="@+id/tv_entity_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_gravity="center_vertical"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_16"/>
    </LinearLayout>

    <View
        style="@style/horizontal_line"/>

    <LinearLayout
        android:id="@+id/layout_func"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_agree"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:text="@string/agree"
            style="@style/lesser_corners_btn"
            android:layout_height="@dimen/dp_40"
            android:textSize="@dimen/sp_14"/>

        <Button
            android:id="@+id/btn_refuse"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_10"
            android:text="@string/refuse"
            style="@style/lesser_corners_666_btn"
            android:layout_height="@dimen/dp_40"
            android:textSize="@dimen/sp_14"/>

        <Button
            android:id="@+id/btn_think_about"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:text="@string/think_about"
            android:singleLine="true"
            android:ellipsize="end"
            style="@style/lesser_corners_666_btn"
            android:layout_height="@dimen/dp_40"
            android:textSize="@dimen/sp_14"/>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/layout_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:text="@string/has_reply_for_ok"
            android:layout_gravity="center"
            android:singleLine="true"
            android:paddingLeft="@dimen/dp_30"
            android:paddingRight="@dimen/dp_30"
            android:ellipsize="end"
            style="@style/lesser_corners_666_btn"
            android:layout_height="@dimen/dp_40"
            android:textSize="@dimen/sp_14"/>

    </FrameLayout>

</LinearLayout>