<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/color_cccccc"
        android:layout_marginBottom="@dimen/dp_35"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_163"
            android:src="@drawable/ic_launcher"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_37.5"
            android:layout_marginRight="@dimen/dp_37.5"
            android:layout_marginTop="@dimen/dp_60"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/dp_22"
                    android:layout_height="@dimen/dp_22"
                    android:layout_marginLeft="@dimen/dp_22"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_launcher" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_25"
                    android:background="@null"
                    android:maxLength="11"
                    android:inputType="number"
                    android:hint="@string/please_input_phone"
                    android:textColor="@color/color_999999"
                    android:textColorHint="@color/color_cccccc"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

            <View
                style="@style/horizontal_line"
                android:layout_marginTop="@dimen/dp_5" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/dp_22"
                    android:layout_height="@dimen/dp_22"
                    android:layout_marginLeft="@dimen/dp_22"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_launcher" />

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_25"
                    android:background="@null"
                    android:hint="@string/please_input_password"
                    android:textColor="@color/color_999999"
                    android:textColorHint="@color/color_cccccc"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

            <View
                style="@style/horizontal_line"
                android:layout_marginTop="@dimen/dp_5" />

            <Button
                android:id="@+id/btn_login"
                style="@style/important_corners_btn"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/login" />

            <TextView
                android:id="@+id/tv_regist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_gravity="center"
                android:text="@string/please_regist"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/color_ffb900"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>