<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_efeff4"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/society_info"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_666666"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white">

            <include
                android:id="@+id/layout_avatar"
                layout="@layout/layout_item_setting" />

            <View
                style="@style/margin_horizontal_line" />

            <include
                android:id="@+id/layout_nick_name"
                layout="@layout/layout_item_setting" />

            <View
                style="@style/margin_horizontal_line" />

            <include
                android:id="@+id/layout_sign"
                layout="@layout/layout_item_setting" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/basic_info"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_666666"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white">

            <include
                android:id="@+id/layout_real_name"
                layout="@layout/layout_item_setting" />

            <View
                style="@style/margin_horizontal_line" />

            <include
                android:id="@+id/layout_gender"
                layout="@layout/layout_item_setting" />

            <View
                style="@style/margin_horizontal_line" />

            <include
                android:id="@+id/layout_birthday"
                layout="@layout/layout_item_setting" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/school_info"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_666666"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white">

            <include
                android:id="@+id/layout_school"
                layout="@layout/layout_item_setting" />

            <View
                style="@style/margin_horizontal_line" />

            <include
                android:id="@+id/layout_professional"
                layout="@layout/layout_item_setting" />

            <View
                style="@style/margin_horizontal_line" />

            <include
                android:id="@+id/layout_enter_date"
                layout="@layout/layout_item_setting" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/about_CV"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_666666"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white">

            <include
                android:id="@+id/layout_project"
                layout="@layout/layout_item_setting" />

            <View
                style="@style/margin_horizontal_line" />

            <include
                android:id="@+id/layout_works"
                layout="@layout/layout_item_setting" />

            <View
                style="@style/margin_horizontal_line" />

            <include
                android:id="@+id/layout_cv"
                layout="@layout/layout_item_setting" />

            <View
                style="@style/margin_horizontal_line" />

            <include
                android:id="@+id/layout_evaluation"
                layout="@layout/layout_item_setting" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/cantact_way"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_666666"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white">

            <include
                android:id="@+id/layout_qq"
                layout="@layout/layout_item_setting" />

            <View
                style="@style/margin_horizontal_line" />

            <include
                android:id="@+id/layout_wechat"
                layout="@layout/layout_item_setting" />

            <View
                style="@style/margin_horizontal_line" />

            <include
                android:id="@+id/layout_phone"
                layout="@layout/layout_item_setting" />

            <View
                style="@style/margin_horizontal_line" />

            <include
                android:id="@+id/layout_email"
                layout="@layout/layout_item_setting" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>