<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:padding="@dimen/dp_15"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_height="wrap_content"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_16"
            android:text="手机号："/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:background="@null"
            android:hint="@string/please_input_phone"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/color_999999"
            android:textColorHint="@color/color_cccccc"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <View
        style="@style/horizontal_line"
        android:layout_marginTop="@dimen/dp_15" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15">

        <TextView
            android:id="@+id/tv_verify_code_tip"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_height="wrap_content"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_16"
            android:text="验证码："/>

        <TextView
            android:id="@+id/tv_get_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/get_verify_code"
            android:textColor="@drawable/selector_text_color_get_verify_code"
            android:textSize="@dimen/sp_16" />

        <View
            android:id="@+id/v_code_line"
            style="@style/vertical_line"
            android:layout_height="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_toLeftOf="@id/tv_get_verify_code" />

        <EditText
            android:id="@+id/et_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_toLeftOf="@id/v_code_line"
            android:layout_toRightOf="@id/tv_verify_code_tip"
            android:background="@null"
            android:hint="@string/please_input_smscode"
            android:textColor="@color/color_999999"
            android:textColorHint="@color/color_cccccc"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_regist"
        style="@style/important_corners_btn"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:text="下一步" />


</LinearLayout>
